<resources>

    <string name="app_name">Sweng2012QuizApp</string>
    <string name="menu_settings">Settings</string>
    <string name="quizquestions_url">https://sweng-quiz.appspot.com/quizquestions</string>
    <string name="quizlogin_url">https://sweng-quiz.appspot.com/login</string>
    <string name="quizzes_url">https://sweng-quiz.appspot.com/quizzes</string>
    <string name="tequila_url">https://tequila.epfl.ch/cgi-bin/tequila/login</string>

    <!-- Error messages -->
    <string name="no_question">There was an error retrieving the question</string>

    <!-- Main Activity -->
    <string name="show_random_question">Show a random question</string>
    <string name="submit_question">Submit quiz question</string>
    <string name="show_quizzes">Take a Quiz</string>
    <string name="logout">Log out</string>
    <string name="offline_mode">Offline mode</string>

    <!-- Common -->
    <string name="correct_answer">✔</string>
    <string name="wrong_answer">✘</string>

    <!-- Show Question Activity -->
    <string name="next_question">Next question</string>
    <string name="like">Like</string>
    <string name="dislike">Dislike</string>
    <string name="incorrect">Incorrect</string>
    <string name="not_rated_status">You have not rated this question</string>
    <string name="like_status">You like the question</string>
    <string name="dislike_status">You dislike the question</string>
    <string name="incorrect_status">You think the question is incorrect</string>
    <string name="error_setting_rating">There was an error setting the rating</string>
    <string name="error_ratings">There was an error retrieving the ratings</string>

    <!-- Edit Question Activity -->
    <string name="type_in_question">Type in the question\'s text body</string>
    <string name="type_in_answer">Type in the answer</string>
    <string name="type_in_tags">Type in the question\'s tags</string>
    <string name="add_answer">+</string>
    <string name="remove_answer">-</string>
    <string name="submit">Submit</string>

    <!-- Authentication Activity -->
    <string name="type_in_username">GASPAR Username</string>
    <string name="type_in_password">GASPAR Password</string>
    <string name="loginWithTequila">Log in using Tequila</string>

    <!-- Show Available Quizzes Activity -->
    <string name="fetch_quizzes_failed">An error occurred while fetching quizzes.</string>
    <string name="no_quizzes">There are no quizzes available at the moment.</string>
    
    <!-- Show Quiz Activity -->
    <string name="guess_answer">✤</string>
    <string name="previous_question">Previous question</string>
    <string name="hand_in_quiz">Hand in quiz</string>
    <string name="fetch_quiz_failed">An error occurred while loading the quiz.</string>

</resources>