<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="16dp"
    android:orientation="vertical" >

    <Button
        android:id="@+id/buttonShowRandom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_random_question" />

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit_question" />

    <Button
        android:id="@+id/buttonShowQuizzes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_quizzes" />

    <Button
        android:id="@+id/buttonLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout" />

    <CheckBox
        android:id="@+id/offlineModeCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onCheckboxClicked"
        android:text="@string/offline_mode" />

</LinearLayout>