<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <EditText
        android:id="@+id/editTextAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/type_in_answer" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/buttonWrongCorrectAnswer"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_weight="1"
        android:text="@string/wrong_answer" />

    <Button
        android:id="@+id/buttonRemoveAnswer"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_weight="1"
        android:text="@string/remove_answer" />

</LinearLayout>