<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="12dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp" >

    <TextView
        android:id="@+id/textViewQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="Question"
        android:textSize="20sp"
        tools:ignore="HardcodedText" />

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/buttonNextQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickNext"
        android:text="@string/next_question" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/buttonLike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.49"
            android:onClick="onClickLike"
            android:text="@string/like" />

        <Button
            android:id="@+id/buttonDislike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.31"
            android:onClick="onClickDislike"
            android:text="@string/dislike" />

        <Button
            android:id="@+id/buttonIncorrect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickIncorrect"
            android:text="@string/incorrect" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewRatingStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25sp"
        android:layout_marginTop="15sp"
        android:gravity="center"
        android:text="@string/not_rated_status"
        android:textSize="15sp" />

</LinearLayout>