<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="12dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp" >

    <TextView
        android:id="@+id/textViewQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="Question"
        android:textSize="20sp"
        tools:ignore="HardcodedText" />

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <Button
            android:id="@+id/buttonPreviousQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickPrevious"
            android:text="@string/previous_question"
            android:textSize="15sp" />
        
        <Button
            android:id="@+id/buttonNextQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickNext"
            android:text="@string/next_question"
            android:textSize="15sp" />
        
    </LinearLayout>

    <Button
        android:id="@+id/buttonHandInQuiz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickHandInQuiz"
        android:text="@string/hand_in_quiz" />
    
</LinearLayout>
